tests/syntax_error/bad_addressof.jou
def foo() -> int*:
    return &1  # Error: the address-of operator '&' cannot be used with a constant
